Update holdings page columns and fix linting issues

--- a/portfolio/templates/portfolio/holdings.html
+++ b/portfolio/templates/portfolio/holdings.html
@@ -40,17 +40,17 @@
                                     </tr>
                                     <tr>
                                         <!-- Shares -->
-                                        <th class="text-end" style="width: 6%;">Cur</th>
-                                        <th class="text-end" style="width: 6%;">Tgt</th>
-                                        <th class="text-end" style="width: 6%;">Var</th>
+                                        <th class="text-end" style="width: 6%;">Current</th>
+                                        <th class="text-end" style="width: 6%;">Target</th>
+                                        <th class="text-end" style="width: 6%;">vTarget</th>
                                         <!-- Value -->
-                                        <th class="text-end" style="width: 8%;">Cur</th>
-                                        <th class="text-end" style="width: 8%;">Tgt</th>
-                                        <th class="text-end" style="width: 8%;">Var</th>
+                                        <th class="text-end" style="width: 8%;">Current</th>
+                                        <th class="text-end" style="width: 8%;">Target</th>
+                                        <th class="text-end" style="width: 8%;">vTarget</th>
                                         <!-- Allocation -->
-                                        <th class="text-end" style="width: 5%;">Cur</th>
-                                        <th class="text-end" style="width: 5%;">Tgt</th>
-                                        <th class="text-end" style="width: 5%;">Var</th>
+                                        <th class="text-end" style="width: 5%;">Current</th>
+                                        <th class="text-end" style="width: 5%;">Target</th>
+                                        <th class="text-end" style="width: 5%;">vTarget</th>
                                     </tr>
                                 </thead>
                                 <tbody>
