--- a/portfolio/templates/portfolio/holdings.html
+++ b/portfolio/templates/portfolio/holdings.html
@@ -24,15 +24,24 @@
                 <div class="card mt-4">
                     <div class="card-header">
                         All Holdings
+                        {% if account %}
+                        <div class="float-end">
+                             <button type="submit" form="holdings-form" class="btn btn-sm btn-primary">Save Changes</button>
+                        </div>
+                        {% endif %}
                     </div>
                     <div class="card-body">
+                        {% if account %}
+                        <form method="post" id="holdings-form">
+                            {% csrf_token %}
+                        {% endif %}
                         <div class="table-responsive">
                             <table class="table table-striped table-bordered table-hover table-sm" style="font-size: 0.8rem;">
                                 <thead>
                                     <tr>
+                                        <th rowspan="2" class="align-middle" style="width: 10%;">Asset Class</th>
                                         <th rowspan="2" class="align-middle" style="width: 5%;">Ticker</th>
                                         <th rowspan="2" class="align-middle" style="width: 17%;">Name</th>
-                                        <th rowspan="2" class="align-middle" style="width: 10%;">Asset Class</th>
                                         <th rowspan="2" class="align-middle text-end" style="width: 8%;">Price</th>
                                         <th colspan="3" class="text-center">Shares</th>
                                         <th colspan="3" class="text-center">Value</th>
@@ -59,13 +68,23 @@
                                     {% for category_code, category_data in group_data.categories.items %}
                                     {% for holding in category_data.holdings %}
                                     <tr class="group-{{ forloop.parentloop.parentloop.counter }}-rows collapse show">
+                                        <td>{{ holding.asset_class }}</td>
                                         <td><strong>{{ holding.ticker }}</strong></td>
                                         <td>{{ holding.name }}</td>
-                                        <td>{{ holding.asset_class }}</td>
+                                        
                                         <td class="text-end">{{ holding.current_price|default:"0"|accounting_amount:2 }}</td>
                                         
-                                        <!-- Shares -->
-                                        <td class="text-end">{{ holding.shares|floatformat:2 }}</td>
+                                        <!-- Shares (Editable if account) -->
+                                        <td class="text-end" style="min-width: 100px;">
+                                            {% if account %}
+                                                <input type="number" name="shares_{{ holding.ticker }}" 
+                                                       value="{{ holding.shares|floatformat:4 }}" 
+                                                       step="0.0001" class="form-control form-control-sm p-1 text-end"
+                                                       style="font-size: 0.8rem;">
+                                            {% else %}
+                                                {{ holding.shares|floatformat:2 }}
+                                            {% endif %}
+                                        </td>
                                         <td class="text-end">{{ holding.target_shares|floatformat:2 }}</td>
                                         <td class="text-end">{{ holding.shares_variance|accounting_number:2 }}</td>
 
@@ -143,6 +162,9 @@
                                 </tfoot>
                             </table>
                         </div>
+                        {% if account %}
+                        </form>
+                        {% endif %}
                     </div>
                 </div>
             </div>
